syntax="proto3";

option java_package="com.pccc.touda.grpc.test";
option java_multiple_files=true;

message HelloServerStreamResponse{
    string bookname=1;
}